--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,38 @@
     <meta charset="utf-8" />
     <title>Exercice hebdomadaire 6</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/main.css" /><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="navigationRail">
+      <div class="navigation">
+        <div class="link1">
+          <img src="img/Link icon.svg" alt="" />
+         <div class="text">Dashboard</div> 
+        </div>
+        <div class="link1">
+          <img src="img/Link2 icon.svg" alt="" />
+          <div class="text">Applications</div>
+        </div>
+        <div class="link1">
+          <img src="img/Link3 icon.svg" alt="" />
+          <div class="text">Store</div>
+        </div>
+      </div>
+      <div class="navigation">
+        <div class="link2">
+          <img src="img/Link4 icon.svg" alt="" />
+          <div class="text">Profile</div>
+        </div>
+        <div class="link2">
+          <img src="img/Link5 icon.svg" alt="" />
+          <div class="text">Logout</div>
+        </div>
+        </div>
+      </div>
+    </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
